syntax = "proto3";
import "Status.proto";
import "asset.proto";
import "ConcurrencyRestrictionPolicy.proto";
import "StreamerType.proto";
import "RuleActionType.proto";
import "google/protobuf/struct.proto";

option csharp_namespace = "phoenix";
option go_package = "./models";

package phoenix;

enum RuleStatus
{
   Ready = 0;
   InProgress = 1;
}

enum RuleConditionType
{
   Asset = 0;
   Country = 1;
   Concurrency = 2;
   IP_RANGE = 3;
   BusinessModule = 4;
   Segments = 5;
   Date = 6;
   Or = 7;
   Header = 8;
   UserSubscription = 9;
   AssetSubscription = 10;
   UserRole = 11;
   DeviceBrand = 12;
   DeviceFamily = 13;
   DeviceManufacturer = 14;
   DeviceModel = 16;
   DeviceUdidDynamicList = 17;
   DynamicKeys = 18;
   UserSessionProfile = 19;
   DeviceDynamicData = 20;
}

message RuleCondition{
   RuleConditionType Type = 1;
   string Description = 2;
}

message NotRuleCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   bool Not = 3;
}

message OrCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   repeated RuleConditionKind Conditions = 3;
   bool Not = 4;
}

message BusinessModuleCondition{
   enum eTransactionType
   {
      PPV = 0;
      Subscription = 1;
      Collection = 2;
   }
   RuleConditionType Type = 1;
   string Description = 2;
   int64 BusinessModuleId = 3;
   eTransactionType BusinessModuleType = 4;
}

message AssetCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   string Ksql = 3;
}

message ConcurrencyCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   int32 Limit = 3;
   ConcurrencyRestrictionPolicy RestrictionPolicy = 4;
}

message DateCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   bool Not = 3;
   int64 StartDate = 4;
   int64 EndDate = 5;
}

message IpRangeCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   string FromIp = 3;
   string ToIp = 4;
   int64 IpFrom = 5;
   int64 IpTo = 6;
}

message CountryCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   bool Not = 3;
   repeated int32 Countries = 4;
}

message HeaderCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   bool Not = 3;
   string Key = 4;
   string Value = 5;
}

message UserSubscriptionCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   repeated int64 SubscriptionIds = 3;
}

message AssetSubscriptionCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   repeated int64 SubscriptionIds = 3;
}

message UdidDynamicListCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   int64 Id = 3;
}

message UserRoleCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   repeated int64 RoleIds = 3;
}

message UserSessionProfileCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   int64 Id = 3;
}

message SegmentsCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   repeated int64 SegmentIds = 3;
}

message DeviceBrandCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   repeated int64 IdIn = 3;
}

message DeviceFamilyCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   repeated int64 IdIn = 3;
}

message DeviceManufacturerCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   repeated int64 IdIn = 3;
}

message DeviceModelCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   string RegexEqual = 3;
}

message DynamicKeysCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   string Key = 3;
   repeated string Values = 4;
}

message DeviceDynamicDataCondition{
   RuleConditionType Type = 1;
   string Description = 2;
   string Key = 3;
   string Value = 4;
}

message RuleAction{
   RuleActionType Type = 1;
   string Description = 2;

   message AssetBlockAction{
      RuleActionType Type = 1;
      string Description = 2;
   }

   message AssetUserRuleBlockAction{
      RuleActionType Type = 1;
      string Description = 2;
   }

   message AllowPlaybackAction{
      RuleActionType Type = 1;
      string Description = 2;
   }

   message BlockPlaybackAction{
      RuleActionType Type = 1;
      string Description = 2;
   }

   message TimeOffsetRuleAction{
      RuleActionType Type = 1;
      string Description = 2;
      int32 Offset = 3;
      bool TimeZone = 4;
   }

   message EndDateOffsetRuleAction{
      RuleActionType Type = 1;
      string Description = 2;
      int32 Offset = 3;
      bool TimeZone = 4;
   }

   message StartDateOffsetRuleAction{
      RuleActionType Type = 1;
      string Description = 2;
      int32 Offset = 3;
      bool TimeZone = 4;
   }

   message AssetUserRuleFilterAction{
      RuleActionType Type = 1;
      string Description = 2;
      bool ApplyOnChannel = 3;
   }

   message ApplyDiscountModuleRuleAction {
      RuleActionType Type = 1;
      string Description = 2;
      int64 DiscountModuleId = 3;
   }

   message ApplyPlaybackAdapterRuleAction {
      RuleActionType Type = 1;
      string Description = 2;
      int32 AdapterId = 3;
   }

   enum AssetLifeCycleRuleAction
   {
      Unknown = 0;
      Add = 1;
      Remove = 2;
   }

   enum AssetLifeCycleRuleTransitionType
   {
      Tag = 0;
      BusinessModel = 1;
   }

   message AssetLifeCycleTransitionAction{
      RuleActionType Type = 1;
      string Description = 2;
      AssetLifeCycleRuleAction ActionType = 3;
      AssetLifeCycleRuleTransitionType TransitionType = 4;
   }

   message AssetLifeCycleTagTransitionAction{
      RuleActionType Type = 1;
      string Description = 2;
      AssetLifeCycleRuleAction ActionType = 3;
      AssetLifeCycleRuleTransitionType TransitionType = 4;
      repeated int32 TagIds = 5;
   }

   message LifeCycleFileTypesAndPpvsTransitions{
      repeated int32 FileTypeIds = 1;
      repeated int32 PpvIds = 2;
   }

   message AssetLifeCycleBuisnessModuleTransitionAction{
      RuleActionType Type = 1;
      string Description = 2;
      AssetLifeCycleRuleAction ActionType = 3;
      AssetLifeCycleRuleTransitionType TransitionType = 4;
      LifeCycleFileTypesAndPpvsTransitions Transitions = 5;
   }

   message ApplyFreePlaybackAction{
      RuleActionType Type = 1;
      string Description = 2;
   }
}


message Rule {
   int64 Id = 1;
   string Name = 2;
   string Description = 3;
   int32 GroupId = 4;
   RuleStatus Status = 5;
   string Label = 6;
}

message RuleConditionKind{
   oneof kind{
      OrCondition OrCondition = 1;
      NotRuleCondition NotRuleCondition = 2;
      BusinessModuleCondition BusinessModuleCondition = 3;
      AssetCondition AssetCondition = 4;
      DateCondition DateCondition = 5;
      ConcurrencyCondition ConcurrencyCondition = 6;
      CountryCondition CountryCondition = 7;
      IpRangeCondition IpRangeCondition = 8;
      HeaderCondition HeaderCondition = 9;
      UserSubscriptionCondition UserSubscriptionCondition = 10;
      AssetSubscriptionCondition AssetSubscriptionCondition = 11;
      UserRoleCondition UserRoleCondition = 12;
      UdidDynamicListCondition UdidDynamicListCondition = 13;
      UserSessionProfileCondition UserSessionProfileCondition = 14;
   }
}

message RuleActionKind{
   oneof kind{
      RuleAction.AssetBlockAction AssetBlockAction = 1;
      RuleAction.EndDateOffsetRuleAction EndDateOffsetRuleAction = 2;
      RuleAction.StartDateOffsetRuleAction StartDateOffsetRuleAction = 3;
      RuleAction.AssetUserRuleBlockAction AssetUserRuleBlockAction = 4;
      RuleAction.AssetUserRuleFilterAction AssetUserRuleFilterAction = 5;
      RuleAction.AllowPlaybackAction AllowPlaybackAction = 6;
      RuleAction.BlockPlaybackAction BlockPlaybackAction = 7;
      RuleAction.ApplyDiscountModuleRuleAction ApplyDiscountModuleRuleAction = 8;
      RuleAction.ApplyPlaybackAdapterRuleAction ApplyPlaybackAdapterRuleAction = 9;
      RuleAction.AssetLifeCycleTagTransitionAction AssetLifeCycleTagTransitionAction = 10;
      RuleAction.AssetLifeCycleBuisnessModuleTransitionAction AssetLifeCycleBuisnessModuleTransitionAction = 11;
      RuleAction.ApplyFreePlaybackAction ApplyFreePlaybackAction = 12;
   }
}

message AssetRule {
   repeated RuleConditionKind Conditions = 1;
   repeated RuleActionKind Actions = 2;
   Rule Rule = 3;
}